--- a/package.json
+++ b/package.json
@@ -14,9 +14,14 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "alpinejs": "^3.2.4",
+    "autoprefixer": "^10.3.2",
     "gatsby": "^3.11.1",
+    "gatsby-plugin-postcss": "^4.12.0",
+    "postcss": "^8.3.6",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "tailwindcss": "^2.2.7"
   },
   "devDependencies": {
     "prettier": "2.3.2"
