--- a/package.json
+++ b/package.json
@@ -14,13 +14,15 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
-    "autoprefixer": "^10.3.3",
-    "gatsby": "^3.12.1",
-    "gatsby-plugin-postcss": "^4.12.0",
-    "postcss": "^8.3.6",
+    "autoprefixer": "^10.3.6",
+    "gatsby": "^3.14.0",
+    "gatsby-plugin-netlify-cms": "^5.14.0",
+    "gatsby-plugin-postcss": "^4.14.0",
+    "netlify-cms-app": "^2.15.44",
+    "postcss": "^8.3.8",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "tailwindcss": "^2.2.8"
+    "tailwindcss": "^2.2.16"
   },
   "devDependencies": {
     "prettier": "2.3.2"
